--- a/src/components/favorites-tab.less
+++ b/src/components/favorites-tab.less
@@ -31,8 +31,8 @@
   position: relative;
 }
 
-.FavoritesTab-cardStar {
+.FavoritesTab-cardRemoveButton {
   position: absolute;
-  top: -14px;
-  right: -5px;
+  top: 4px;
+  right: 4px;
 }
