EDU-1061 Streamline danger zone actions

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -81,6 +81,7 @@
 @import '../components/default-page-template.less';
 @import '../components/history-control-panel.less';
 @import '../components/not-supported-section.less';
+@import '../components/permanent-actions-card.less';
 @import '../components/plugin-selector-dialog.less';
 @import '../components/document-metadata-modal.less';
 @import '../components/admin/storage-plans-tab.less';
