--- a/src/components/account-settings-tab.less
+++ b/src/components/account-settings-tab.less
@@ -41,6 +41,6 @@
   font-size: @edu-font-size-sm;
 }
 
-.AccountSettingsTab-closeAccountButton {
-  margin-top: 15px;
+.AccountSettingsTab-permanentActionsCard {
+  margin-top: 15px !important;
 }
