EDU-1066 Restyle section display header

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -64,6 +64,7 @@
 @import '../components/pages/dashboard.less';
 @import '../components/section-display.less';
 @import '../components/iteration-panel.less';
+@import '../components/sections-display.less';
 @import '../components/sorting-selector.less';
 @import '../components/copyright-notice.less';
 @import '../components/default-site-logo.less';
