--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -77,6 +77,9 @@
 // Border radii
 @edu-border-radius-base: 8px;
 
+// Box shadows
+@edu-box-shadow-base: 8px;
+
 // Responsiveness
 @edu-breakpoint-xs: 480px;
 @edu-breakpoint-sm: 576px;
