--- a/src/components/comments-panel.less
+++ b/src/components/comments-panel.less
@@ -12,7 +12,18 @@
   }
 }
 
+.CommentsPanel-topicHeader {
+  display: flex;
+  align-items: center;
+}
+
+.CommentsPanel-topicInputPrefix {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
 .CommentsPanel-topicInput {
+  width: 100%;
   padding: 5px 0;
 
   &.CommentsPanel-topicInput--edit {
@@ -34,10 +45,6 @@
   display: flex;
   justify-content: space-between;
   font-size: 12px;
-}
-
-.CommentsPanel-author {
-  font-weight: bold;
 }
 
 .CommentsPanel-date {
