--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -46,7 +46,7 @@
 
 .ControlPanel-openButton {
   .m-no-spinner-background;
-  border-radius: 0;
+  border-radius: 0 !important;
   height: @control-panel-height !important;
   width: @control-panel-height !important;
 
@@ -54,9 +54,7 @@
     font-size: 0.5 * @control-panel-height;
   }
 
-  &:hover,
-  &:active,
-  &:visited {
-    border-radius: 0;
+  &:disabled {
+    background-color: @edu-background-color-base !important;
   }
 }
