EDU-1065 Replace cryptic open-contribution badges with letters

--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -58,24 +58,21 @@
   margin-right: 8px;
 }
 
-.u-verified-badge {
-  padding: 8px;
-  font-size: 16px;
-  color: @edu-text-color-secondary;
-  background-color: @edu-background-color-base;
-  border-radius: 50%;
-}
-
-.u-allowed-open-contribution-badge {
+.u-badge {
   width: 32px;
   height: 32px;
   display: flex;
-  font-size: 17px;
   align-items: center;
   justify-content: center;
-  color: @edu-text-color-secondary;
-  background-color: @edu-background-color-base;
+  font-size: @edu-font-size-sm;
+  color: @edu-text-color-secondary !important;
+  background-color: @edu-background-color-base !important;
   border-radius: 50%;
+}
+
+.u-verified-badge {
+  .u-badge;
+  font-size: @edu-font-size-lg;
 }
 
 .u-modal-body {
