EDU-1065 Just make the status icon white for now, it will be removed soon enough

--- a/src/components/edit-control-panel.less
+++ b/src/components/edit-control-panel.less
@@ -29,7 +29,7 @@
   }
 
   &.EditControlPanel-statusIcon--dirty {
-    color: @edu-warning-color;
+    color: inherit;
   }
 
   &.EditControlPanel-statusIcon--invalid {
