EDU-1035 Merge former users page into admin page

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -95,3 +95,5 @@
 
 @edu-media-phone: %(~"screen and (max-width: %s)", @edu-breakpoint-md - 0.01px);
 @edu-media-not-phone: %(~"screen and (min-width: %s)", @edu-breakpoint-md);
+@edu-media-desktop: %(~"screen and (min-width: %s)", @edu-breakpoint-lg);
+@edu-media-not-desktop: %(~"screen and (max-width: %s)", @edu-breakpoint-lg - 0.01px);
