--- a/src/styles/tabs.less
+++ b/src/styles/tabs.less
@@ -2,10 +2,15 @@
   padding-top: 50px !important;
 
   &.Tabs--smallPadding {
-    padding-top: 20px;
+    padding-top: 20px !important;
   }
 }
 
 .Tabs-tabPane {
   padding: 30px 20px 0 20px;
+
+  &.Tabs-tabPane--noIndentation {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
