--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -34,7 +34,6 @@
 @import '../components/collapsible.less';
 @import '../components/pages/index.less';
 @import '../components/pages/login.less';
-@import '../components/pages/users.less';
 @import '../components/color-picker.less';
 @import '../components/pdf-document.less';
 @import '../components/used-storage.less';
@@ -58,6 +57,7 @@
 @import '../components/pages/register.less';
 @import '../components/markdown-input.less';
 @import '../components/profile-header.less';
+@import '../components/admin/users-tab.less';
 @import '../components/deleted-section.less';
 @import '../components/pages/dashboard.less';
 @import '../components/section-display.less';
