--- a/src/components/user-card.less
+++ b/src/components/user-card.less
@@ -11,6 +11,20 @@
   border-radius: @edu-border-radius-base;
 }
 
+.UserCard-displayName {
+  .m-overflow-ellipsis;
+}
+
+.UserCard-avatarWrapper {
+  display: grid;
+  gap: 5px;
+  grid-auto-flow: row;
+}
+
+.UserCard-avatar {
+  margin: 0 auto !important;
+}
+
 .UserCard-button {
   width: 100%;
 }
