EDU-1063 Rework room membership confirmation page

--- a/src/components/pages/room-membership-confirmation.less
+++ b/src/components/pages/room-membership-confirmation.less
@@ -6,5 +6,8 @@
 }
 
 .RoomMembershipConfirmationPage-message {
-  text-align: center;
+  display: grid;
+  gap: 20px;
+  grid-auto-flow: row;
+  justify-items: center;
 }
