EDU-1063 Streamline room settings tab styling

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -103,12 +103,16 @@
   right: 4px;
 }
 
-.RoomPage-card {
-  margin-top: 40px !important;
+.RoomPage-sectionHeadline {
+  .m-section-headline
+}
 
-  &:first-of-type {
-    margin-top: 0 !important;
-  }
+.RoomPage-metadataSection {
+  .m-section-content;
+}
+
+.RoomPage-permanentActionsCard {
+  margin-top: 40px !important;
 }
 
 .RoomPage-tabCreateItemButton {
