EDU-1067 Correct position of spinner in storage location (when content is scrolled)

--- a/src/components/resource-picker/storage-location.less
+++ b/src/components/resource-picker/storage-location.less
@@ -19,6 +19,15 @@
 .StorageLocation-filesViewerContent {
   height: 100%;
   overflow: auto;
+  position: relative;
+}
+
+.StorageLocation-filesViewerContentOverlay {
+  .m-mask;
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  background-color: fade(@edu-background-color-light, 60%);
 }
 
 .StorageLocation-buttonsLine {
