EDU-1065 Correct delete button disabled color

--- a/src/components/delete-button.less
+++ b/src/components/delete-button.less
@@ -10,4 +10,8 @@
   &:hover {
     color: lighten(@edu-error-color, 15%) !important;
   }
+
+  &:disabled {
+    color: @edu-disabled-color !important;
+  }
 }
