EDU-1062 Rename user page into user-profile page

--- a/src/components/pages/user-profile.less
+++ b/src/components/pages/user-profile.less
@@ -1,21 +1,21 @@
-.UserPage {}
+.UserProfilePage {}
 
-.UserPage-header {
+.UserProfilePage-header {
   margin-bottom: 50px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
 }
 
-.UserPage-headerProfile {
+.UserProfilePage-headerProfile {
   flex: 1 1 auto;
 }
 
-.UserPage-headerStart {
+.UserProfilePage-headerStart {
   flex: 0 0 0%;
 }
 
-.UserPage-introduction {
+.UserProfilePage-introduction {
   margin: 0 auto 60px auto;
   max-width: 700px;
   padding: 20px 30px;
@@ -24,25 +24,25 @@
   border-right: 1px solid @edu-border-color-light;
 }
 
-.UserPage-accountClosed {
+.UserProfilePage-accountClosed {
   font-size: 18px;
   font-weight: bold;
   display: flex;
   justify-content: center;
 }
 
-.UserPage-sectionHeadline {
+.UserProfilePage-sectionHeadline {
   .m-section-headline;
   margin-top: 20px;
   margin-bottom: 15px;
 }
 
-.UserPage-sectionCards {
+.UserProfilePage-sectionCards {
   .m-section-content;
   .m-card-wrapper-wide;
 }
 
-.UserPage-sectionLink {
+.UserProfilePage-sectionLink {
   .m-section-content;
   display: block;
   padding-top: 0;
