--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -22,7 +22,6 @@
 @import '../components/pages/doc.less';
 @import '../components/flip-card.less';
 @import '../components/user-card.less';
-@import '../components/pages/user.less';
 @import '../components/pages/docs.less';
 @import '../components/error-page.less';
 @import '../components/login-form.less';
@@ -67,6 +66,7 @@
 @import '../components/default-site-logo.less';
 @import '../components/input-and-preview.less';
 @import '../components/registration-form.less';
+@import '../components/pages/user-profile.less';
 @import '../components/edit-control-panel.less';
 @import '../components/ui-language-dialog.less';
 @import '../components/admin/settings-tab.less';
