EDU-1062 Limit organization and introduction lengths

--- a/src/components/card-selector.less
+++ b/src/components/card-selector.less
@@ -7,7 +7,7 @@
 .CardSelector-card {
   width: 20px;
   height: 30px;
-  font-size: 10px;
+  font-size: @edu-font-size-xs;
   cursor: pointer;
   user-select: none;
   display: flex;
