--- a/src/components/media-player/track-mixer-editor.less
+++ b/src/components/media-player/track-mixer-editor.less
@@ -72,7 +72,7 @@
 }
 
 .TrackMixerEditor-barPlaceholderText {
-  font-size: 10px;
+  font-size: @edu-font-size-xs;
   padding-left: 5px;
   color: @edu-text-color-secondary;
 }
