--- a/src/components/used-storage.less
+++ b/src/components/used-storage.less
@@ -22,7 +22,7 @@
 }
 
 .UsedStorage-occupiedSpace {
-  font-size: 10px;
+  font-size: @edu-font-size-xs;
   display: flex;
   justify-content: flex-end;
 }
