--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -22,7 +22,7 @@
 
 .EarTrainingDisplay-randomTestsIcon {
   margin-left: 5px;
-  font-size: 10px;
+  font-size: @edu-font-size-xs;
 }
 
 .EarTrainingDisplay-radioGroup {
