--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -6,6 +6,7 @@
 @edu-font-size-base: 14px;
 @edu-font-size-lg: @edu-font-size-base + 2px;
 @edu-font-size-sm: @edu-font-size-base - 2px;
+@edu-font-size-xs: @edu-font-size-base - 4px;
 @edu-heading-1-size: ceil(@edu-font-size-base * 1.85);
 @edu-heading-2-size: ceil(@edu-font-size-base * 1.55);
 @edu-heading-3-size: ceil(@edu-font-size-base * 1.40);
