--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -109,3 +109,11 @@
 .u-avatar {
   border: 1px solid @edu-border-color-light;
 }
+
+.u-input-count {
+  position: absolute;
+  bottom: -15px;
+  right: 10px;
+  font-size: @edu-font-size-xs;
+  color: @edu-text-color-secondary;
+}
