--- a/src/components/admin/user-account-locked-state-editor.less
+++ b/src/components/admin/user-account-locked-state-editor.less
@@ -1,6 +1,6 @@
 .UserAccountLockedStateEditor {}
 
 .UserAccountLockedStateEditor-date {
-  font-size: 10px;
+  font-size: @edu-font-size-xs;
   color: @edu-text-color-secondary;
 }
