--- a/src/components/media-player/media-player-progress-bar.less
+++ b/src/components/media-player/media-player-progress-bar.less
@@ -86,7 +86,7 @@
 
 .MediaPlayerProgressBar-markTimecode {
   position: absolute;
-  font-size: 10px;
+  font-size: @edu-font-size-xs;
   text-align: center;
   color: @edu-text-color;
   top: @edu-progress-bar-hover-height + 5px;
