--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -51,7 +51,7 @@
 
 .QuickTesterDisplay-randomTestsIcon {
   margin-left: 5px;
-  font-size: 10px;
+  font-size: @edu-font-size-xs;
 }
 
 .QuickTesterEditor {}
