NOTICKET: Streamline button to create room with button to create document in room and button to add room members

--- a/src/components/rooms-tab.less
+++ b/src/components/rooms-tab.less
@@ -2,6 +2,12 @@
 
 .RoomsTab-info {
   .m-info-card;
+  margin-bottom: 20px;
+}
+
+.RoomsTab-createRoomButton {
+  display: block !important;
+  margin-left: auto;
 }
 
 .RoomsTab-roomsGroupHeadline {
