EDU-1060 Change page headline

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -29,6 +29,12 @@
   user-select: none;
 }
 
+.SearchPage-resultsCount {
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: end;
+}
+
 .SearchPage-cellTags {
   display: flex;
   flex-wrap: wrap;
