EDU-1074 Streamline user account form styles

--- a/src/components/pages/complete-password-reset.less
+++ b/src/components/pages/complete-password-reset.less
@@ -1,10 +1,17 @@
 .CompletePasswordResetPage {}
 
+.CompletePasswordResetPage-form {
+  .m-narrow-fullscreen-page-content;
+}
+
 .CompletePasswordResetPage-title {
-  text-align: center;
-  margin-bottom: 32px;
+  .m-user-form-title;
 }
 
 .CompletePasswordResetPage-message {
   text-align: center;
+}
+
+.CompletePasswordResetPage-button {
+  .m-user-form-submit-button;
 }
