--- a/src/components/pages/register.less
+++ b/src/components/pages/register.less
@@ -1,8 +1,7 @@
 .RegisterPage {}
 
 .RegisterPage-title {
-  text-align: center;
-  margin-bottom: 32px;
+  .m-user-form-title;
 }
 
 .RegisterPage-form {
