--- a/src/components/pages/reset-password.less
+++ b/src/components/pages/reset-password.less
@@ -3,8 +3,7 @@
 }
 
 .ResetPasswordPage-title {
-  text-align: center;
-  margin-bottom: 32px;
+  .m-user-form-title;
 }
 
 .ResetPasswordPage-form {
@@ -12,5 +11,5 @@
 }
 
 .ResetPasswordPage-formButton {
-  margin-top: 48px;
+  .m-user-form-submit-button;
 }
