--- a/src/components/registration-form.less
+++ b/src/components/registration-form.less
@@ -19,7 +19,7 @@
 }
 
 .RegistrationForm-registerButton {
-  margin-top: @edu-control-height-lg;
+  .m-user-form-submit-button;
 }
 
 .RegistrationForm-verificationMessage {
