--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -393,3 +393,12 @@
   border-radius: 50%;
   background: rgba(0, 0, 0, 0.4);
 }
+
+.m-user-form-title {
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.m-user-form-submit-button {
+  margin-top: @edu-control-height-lg;
+}
