--- a/src/components/admin/admin-settings-tab.less
+++ b/src/components/admin/admin-settings-tab.less
@@ -1,6 +1,6 @@
-.SettingsTab {}
+.AdminSettingsTab {}
 
-.SettingsTab-collapse {
+.AdminSettingsTab-collapse {
   margin-top: 30px !important;
 
   &:first-of-type {
@@ -8,15 +8,15 @@
   }
 }
 
-.SettingsTab-collapseTabPane {
+.AdminSettingsTab-collapseTabPane {
   padding: 10px;
 }
 
-.SettingsTab-saveButton {
+.AdminSettingsTab-saveButton {
   margin-top: 30px;
 }
 
-.SettingsTab-templateDocument {
+.AdminSettingsTab-templateDocument {
   width: 100%;
   display: flex;
   flex-direction: column;
