EDU-1069 Add documents tab to dashboard

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -80,6 +80,7 @@
 @import '../components/permanent-actions-card.less';
 @import '../components/plugin-selector-dialog.less';
 @import '../components/dashboard/settings-tab.less';
+@import '../components/dashboard/documents-tab.less';
 @import '../components/document-metadata-modal.less';
 @import '../components/admin/user-accounts-tab.less';
 @import '../components/admin/storage-plans-tab.less';
