EDU-1069 Add option to toggle for own documents only

--- a/src/components/dashboard/documents-tab.less
+++ b/src/components/dashboard/documents-tab.less
@@ -17,7 +17,14 @@
   grid-auto-flow: row;
 }
 
-.DocumentsTab-filter {
+.DocumentsTab-filters {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  .m-fake-flex-gap(@edu-content-padding);
+}
+
+.DocumentsTab-textFilter {
   max-width: 300px;
 }
 
