EDU-1078 Rework comments panel

--- a/src/components/comments-panel.less
+++ b/src/components/comments-panel.less
@@ -20,6 +20,7 @@
 .CommentsPanel-topicInputPrefix {
   margin-right: 10px;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 .CommentsPanel-topicInput {
@@ -68,10 +69,14 @@
   right: -20px;
 }
 
-.CommentsPanel-addButton {
+.CommentsPanel-postCommentButton {
   display: flex !important;
   margin-top: 20px;
   margin-left: auto;
+}
+
+.CommentsPanel-newTopicButton {
+  margin-top: 20px;
 }
 
 .CommentsPanel-editTopicButtonsGroup {
