EDU-1064 Improve style of irreversible actions section

--- a/src/components/admin/technical-maintenance-tab.less
+++ b/src/components/admin/technical-maintenance-tab.less
@@ -10,7 +10,7 @@
 
 .TechnicalMaintenanceTab-sectionHeader {
   margin-bottom: 10px;
-  font-size: 16px;
+  font-weight: bold;
 }
 
 .TechnicalMaintenanceTab-sectionDescription {
@@ -24,6 +24,6 @@
 }
 
 .TechnicalMaintenanceTab-buttonSubtext {
-  font-size: 11px;
+  font-size: @edu-font-size-sm;
   margin-top: 5px;
 }
