--- a/src/components/collapsible.less
+++ b/src/components/collapsible.less
@@ -59,7 +59,7 @@
 
 .Collapsible-headerArrow {
   display: inline-block;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   margin-right: 0;
   margin-left: auto;
   transition: all 0.3s ease;
@@ -70,7 +70,7 @@
 }
 
 .Collapsible-icon {
-  font-size: 16px;
+  font-size: @edu-font-size-lg;
   display: flex;
 
   &.Collapsible-icon--standalone {
