--- a/src/components/localization/language-icon.less
+++ b/src/components/localization/language-icon.less
@@ -5,7 +5,7 @@
   justify-content: center;
   width: 32px;
   height: 32px;
-  font-size: 11px;
+  font-size: @edu-font-size-xs;
   color: @edu-text-color-secondary;
   border: 1px solid @edu-text-color-secondary;
   border-radius: 50%;
