--- a/src/components/media-player/media-player-controls.less
+++ b/src/components/media-player/media-player-controls.less
@@ -19,7 +19,7 @@
 }
 
 .MediaPlayerControls-playbackRate {
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
 }
 
 .MediaPlayerControls-playbackRateItem {
@@ -28,7 +28,7 @@
 
 .MediaPlayerControls-playbackRateItemSelection {
   width: 10px;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   line-height: 12px;
 }
 
@@ -51,7 +51,7 @@
   height: 35px;
 
   .ant-slider-mark-text {
-    font-size: 11px;
+    font-size: @edu-font-size-xs;
   }
 }
 
