--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -22,7 +22,7 @@
 
 .RoomPage-subtitle {
   display: flex;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   justify-content: space-between;
   color: @edu-text-color-secondary;
   padding: 0 @edu-content-padding;
@@ -77,7 +77,7 @@
   border-radius: @edu-border-radius-base;
   margin-right: 10px;
   padding: 2px 8px;
-  font-size: 13px;
+  font-size: @edu-font-size-sm;
   font-style: italic;
 }
 
