--- a/src/components/pages/user-profile.less
+++ b/src/components/pages/user-profile.less
@@ -25,7 +25,7 @@
 }
 
 .UserProfilePage-accountClosed {
-  font-size: 18px;
+  font-size: @edu-font-size-xl;
   font-weight: bold;
   display: flex;
   justify-content: center;
