--- a/src/components/profile-header.less
+++ b/src/components/profile-header.less
@@ -25,13 +25,13 @@
 
 .ProfileHeader-organization {
   display: block;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   color: @edu-text-color-secondary;
 }
 
 .ProfileHeader-email {
   .m-control-group-wide;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   margin-top: 5px;
   color: @edu-text-color-secondary;
 }
