--- a/src/components/resource-picker/files-upload-screen.less
+++ b/src/components/resource-picker/files-upload-screen.less
@@ -23,7 +23,7 @@
 
 .FilesUploadScreen-fileStatusError {
   padding-left: 25px;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   color: @edu-error-color;
 }
 
@@ -37,7 +37,7 @@
 
 .FilesUploadScreen-messageDetails {
   padding: 5px 0 0 5px;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
 }
 
 .FilesUploadScreen-fileStatusContainer {
@@ -68,7 +68,7 @@
 }
 
 .FilesUploadScreen-imageOptimizationCheckbox {
-  font-size: 13px;
+  font-size: @edu-font-size-sm;
   margin-left: auto;
   margin-right: 0;
 }
