--- a/src/plugins/interactive-media/interactive-media.less
+++ b/src/plugins/interactive-media/interactive-media.less
@@ -67,7 +67,7 @@
 
 .InteractiveMediaDisplay-overlayChapterTitle {
   flex: none;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
 }
 
 .InteractiveMediaDisplay-overlayChapterContent {
