--- a/src/styles/breadcrumbs.less
+++ b/src/styles/breadcrumbs.less
@@ -1,5 +1,5 @@
 .Breadcrumbs {
-  font-size: 12px !important;
+  font-size: @edu-font-size-sm !important;
   padding-bottom: 2 * @edu-content-padding !important;
 
   .ant-breadcrumb-link:hover {
