--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -4,6 +4,7 @@
 
 // Font sizes
 @edu-font-size-base: 14px;
+@edu-font-size-xl: @edu-font-size-base + 4px;
 @edu-font-size-lg: @edu-font-size-base + 2px;
 @edu-font-size-sm: @edu-font-size-base - 2px;
 @edu-font-size-xs: @edu-font-size-base - 4px;
