--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -256,7 +256,7 @@
 }
 
 .m-section-headline {
-  font-size: 17px;
+  font-size: @edu-font-size-lg;
   margin: 10px 0;
   color: @edu-text-color;
 }
@@ -329,7 +329,6 @@
 
 .m-markdown-button {
   cursor: pointer;
-  font-size: 14px;
   padding: 3px 9px;
   opacity: 0.45;
   border-radius: 5px;
@@ -346,7 +345,7 @@
 
 .m-markdown-button-small {
   .m-markdown-button;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   padding: 1px 4px;
   border-radius: 2px;
 }
