--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -65,7 +65,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: @edu-font-size-sm;
+  font-size: @edu-font-size-xs;
   color: @edu-text-color-secondary !important;
   background-color: @edu-background-color-base !important;
   border-radius: 50%;
