--- a/src/components/media-player/media-player-progress-bar.less
+++ b/src/components/media-player/media-player-progress-bar.less
@@ -62,7 +62,7 @@
 }
 
 .MediaPlayerProgressBar-progressTooltipText {
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   padding: 4px 8px;
   color: @edu-white;
   border-radius: @edu-border-radius-base;
