--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -51,7 +51,7 @@
 
 .DocPage-verifiedBadge {
   padding: 8px;
-  font-size: 16px;
+  font-size: @edu-font-size-lg;
   color: @edu-text-color-secondary;
   background-color: @edu-background-color-base;
   border-radius: 50%;
