--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -25,7 +25,7 @@
 
 .SearchPage-deselectTagsLink {
   padding-left: 10px;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   user-select: none;
 }
 
