--- a/src/components/room-card.less
+++ b/src/components/room-card.less
@@ -24,7 +24,6 @@
   .m-line-clamp(1);
   align-self: center;
   text-align: center;
-  font-size: 14px;
 
   &.RoomCard-name--doubleLine {
     .m-line-clamp(2);
@@ -36,7 +35,7 @@
   width: 100%;
   align-self: center;
   text-align: center;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   padding-top: 3px;
   color: @edu-text-color-secondary;
 }
@@ -48,7 +47,7 @@
 .RoomCard-infoRow {
   display: flex;
   gap: 10px;
-  font-size: 12px;
+  font-size: @edu-font-size-sm;
   padding: 0 0px 5px 10px;
   color: lighten(@edu-text-color, 10%);
 
