--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -103,7 +103,7 @@
 
 .SectionDisplay-actionTooltipSubtext {
   margin-top: 5px;
-  font-size: 11px;
+  font-size: @edu-font-size-sm;
 }
 
 .SectionDisplay-sectionInfo {
