--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -73,7 +73,7 @@
   position: absolute;
   right: 5px;
   bottom: -12px;
-  font-size: 11px;
+  font-size: @edu-font-size-sm;
   user-select: none;
 }
 
