--- a/src/components/byte-input.less
+++ b/src/components/byte-input.less
@@ -9,9 +9,9 @@
 
 .ByteInput-unitField {
   display: inline-block;
-  margin-left: @edu-control-spacing-base;
+  margin-left: @edu-control-spacing-base !important;
 
   &.ant-select {
-    width: 80px;
+    width: 80px !important;
   }
 }
