--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -1,5 +1,5 @@
 @section-display-toolbar-display: flex;
-@section-display-editable-padding-top: 50px;
+@section-display-editable-padding-top: 60px;
 
 .SectionDisplay {
   min-height: 70px;
@@ -48,7 +48,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  padding: 5px 7px;
+  padding: 7px;
   display: @section-display-toolbar-display;
   justify-content: space-between;
   background-color: @edu-background-color-base;
