--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -91,6 +91,6 @@
 .MediaAnalysisEditor-segmentsDropzoneInfo {
   border-radius: @edu-border-radius-base;
   position: absolute;
-  bottom: @edu-control-spacing-wide;
-  right: @edu-control-spacing-wide;
+  right: 1em;
+  bottom: 1.5em;
 }
