--- a/test-app/src/bundles/home-page-template.less
+++ b/test-app/src/bundles/home-page-template.less
@@ -40,6 +40,7 @@
 .HomePageTemplate-subtitle {
   font-size: @edu-font-size-xl;
   font-weight: 300;
+  text-align: center;
 }
 
 .HomePageTemplate-info {
