--- a/src/styles/tabs.less
+++ b/src/styles/tabs.less
@@ -7,10 +7,5 @@
 }
 
 .Tabs-tabPane {
-  padding: 30px 20px 0 20px;
-
-  &.Tabs-tabPane--noIndentation {
-    padding-left: 0;
-    padding-right: 0;
-  }
+  padding-top: 30px;
 }
