EDU-1064 Show profile icon as clickable and fix counter text

--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -112,8 +112,12 @@
 
 .u-input-count {
   position: absolute;
-  bottom: -15px;
+  bottom: -1.5em;
   right: 10px;
   font-size: @edu-font-size-xs;
   color: @edu-text-color-secondary;
+}
+
+.u-clickable {
+  cursor: pointer;
 }
