EDU-1070 Change docs page to redaction

--- a/src/components/pages/redaction.less
+++ b/src/components/pages/redaction.less
@@ -1,6 +1,6 @@
-.DocsPage {}
+.RedactionPage {}
 
-.DocsPage-controls {
+.RedactionPage-controls {
   margin-bottom: 20px;
   display: grid;
   gap: 15px;
@@ -12,14 +12,14 @@
   }
 }
 
-.DocsPage-filter {
+.RedactionPage-filter {
   width: 100%;
 }
 
-.DocsPage-newDocumentButton {
+.RedactionPage-newDocumentButton {
   margin-top: 10px;
 }
 
-.DocsPage-badges {
+.RedactionPage-badges {
   .m-control-group;
 }
