--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -20,7 +20,6 @@
 @import '../components/pages/doc.less';
 @import '../components/flip-card.less';
 @import '../components/user-card.less';
-@import '../components/pages/docs.less';
 @import '../components/error-page.less';
 @import '../components/login-form.less';
 @import '../components/search-bar.less';
@@ -52,6 +51,7 @@
 @import '../components/pages/register.less';
 @import '../components/markdown-input.less';
 @import '../components/profile-header.less';
+@import '../components/pages/redaction.less';
 @import '../components/documents-table.less';
 @import '../components/deleted-section.less';
 @import '../components/pages/dashboard.less';
