EDU-1070 Support cloning document from doc page

--- a/src/components/favorite-star.less
+++ b/src/components/favorite-star.less
@@ -1,6 +1,7 @@
 .FavoriteStar {
   display: flex;
-  align-content: center;
+  height: 20px !important;
+  align-items: center;
 }
 
 .FavoriteStar-rate {
