--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -47,12 +47,17 @@
 .DocPage-badges {
   .m-control-group;
   justify-content: end;
+  margin-bottom: 10px;
 }
 
-.DocPage-verifiedBadge {
+.DocPage-badge {
   padding: 8px;
   font-size: @edu-font-size-lg;
   color: @edu-text-color-secondary;
   background-color: @edu-background-color-base;
   border-radius: 50%;
+}
+
+.DocPage-cloneButton {
+  background-color: @edu-background-color-base !important;
 }
