EDU-1105 Fix file preview for videos

--- a/src/components/resource-picker/resource-preview.less
+++ b/src/components/resource-picker/resource-preview.less
@@ -25,7 +25,7 @@
   grid-row: 1;
   grid-column: 1;
   padding: @edu-content-padding;
-  height: 360px;
+  height: 100%;
   border-radius: @edu-border-radius-base;
   border: 1px solid @edu-border-color-light;
   background-color: @edu-white;
