--- a/src/plugins/multitrack-media/multitrack-media.less
+++ b/src/plugins/multitrack-media/multitrack-media.less
@@ -7,5 +7,15 @@
 .MultitrackMediaEditor {}
 
 .MultitrackMediaEditor-trackMixerPreview {
-  margin-bottom: 20px;
+  padding: @edu-content-padding;
+  margin: -@edu-content-padding;
+  margin-bottom: 40px;
+  background-color: @edu-background-color-light;
+}
+
+.MultitrackMediaEditor-trackMixerPreviewPlayer {
+  display: flex;
+  justify-content: flex-end;
+  font-style: italic;
+  font-size: @edu-font-size-sm;
 }
