EDU-1094 Add initialVolume to multitrack-media plugin

--- a/src/components/media-player/media-volume-slider.less
+++ b/src/components/media-player/media-volume-slider.less
@@ -21,3 +21,9 @@
     height: 60px;
   }
 }
+
+.MediaVolumeSlider-sliderValueLabel {
+  width: 50px;
+  display: flex;
+  justify-content: flex-end;
+}
