--- a/src/plugins/multitrack-media/multitrack-media.less
+++ b/src/plugins/multitrack-media/multitrack-media.less
@@ -11,6 +11,7 @@
   margin: -@edu-content-padding;
   margin-bottom: 40px;
   background-color: @edu-background-color-light;
+  border-bottom: 1px solid @edu-border-color-base;
 }
 
 .MultitrackMediaEditor-trackMixerPreviewPlayer {
@@ -18,4 +19,5 @@
   justify-content: flex-end;
   font-style: italic;
   font-size: @edu-font-size-sm;
+  padding-bottom: 5px;
 }
