EDU-1094 Add initialVolume to media-analysis plugin

--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -94,3 +94,19 @@
   right: 1em;
   bottom: 1.5em;
 }
+
+.MediaAnalysisEditor-trackMixerPreview {
+  padding: @edu-content-padding;
+  margin: -@edu-content-padding;
+  margin-bottom: 40px;
+  background-color: @edu-background-color-light;
+  border-bottom: 1px solid @edu-border-color-base;
+}
+
+.MediaAnalysisEditor-trackMixerPreviewPlayer {
+  display: flex;
+  justify-content: flex-end;
+  font-style: italic;
+  font-size: @edu-font-size-sm;
+  padding-bottom: 5px;
+}
