EDU-1094 Extract mixin for common media preview styling

--- a/src/plugins/multitrack-media/multitrack-media.less
+++ b/src/plugins/multitrack-media/multitrack-media.less
@@ -7,17 +7,9 @@
 .MultitrackMediaEditor {}
 
 .MultitrackMediaEditor-trackMixerPreview {
-  padding: @edu-content-padding;
-  margin: -@edu-content-padding;
-  margin-bottom: 40px;
-  background-color: @edu-background-color-light;
-  border-bottom: 1px solid @edu-border-color-base;
+  .m-plugin-media-preview;
 }
 
-.MultitrackMediaEditor-trackMixerPreviewPlayer {
-  display: flex;
-  justify-content: flex-end;
-  font-style: italic;
-  font-size: @edu-font-size-sm;
-  padding-bottom: 5px;
+.MultitrackMediaEditor-trackMixerPreviewLabel {
+  .m-plugin-media-preview-label;
 }
