--- a/src/plugins/media-analysis/media-analysis.less
+++ b/src/plugins/media-analysis/media-analysis.less
@@ -96,17 +96,9 @@
 }
 
 .MediaAnalysisEditor-trackMixerPreview {
-  padding: @edu-content-padding;
-  margin: -@edu-content-padding;
-  margin-bottom: 40px;
-  background-color: @edu-background-color-light;
-  border-bottom: 1px solid @edu-border-color-base;
+  .m-plugin-media-preview;
 }
 
-.MediaAnalysisEditor-trackMixerPreviewPlayer {
-  display: flex;
-  justify-content: flex-end;
-  font-style: italic;
-  font-size: @edu-font-size-sm;
-  padding-bottom: 5px;
+.MediaAnalysisEditor-trackMixerPreviewLabel {
+  .m-plugin-media-preview-label;
 }
