--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -406,3 +406,19 @@
 .m-user-form-submit-button {
   margin-top: @edu-control-height-lg;
 }
+
+.m-plugin-media-preview {
+  padding: @edu-content-padding;
+  margin: -@edu-content-padding;
+  margin-bottom: 40px;
+  background-color: @edu-background-color-light;
+  border-bottom: 1px solid @edu-border-color-base;
+}
+
+.m-plugin-media-preview-label {
+  display: flex;
+  justify-content: flex-end;
+  font-style: italic;
+  font-size: @edu-font-size-sm;
+  padding-bottom: 5px;
+}
