EDU-1094 Add initialVolume to media-slideshow plugin

--- a/src/plugins/media-slideshow/media-slideshow.less
+++ b/src/plugins/media-slideshow/media-slideshow.less
@@ -16,10 +16,14 @@
   border-style: none none dotted;
 }
 
-.MediaSlideshowEditor-chapterEditorDivider {
-  margin: 0 -@edu-content-padding;
-  padding-top: 20px;
-  color: @edu-text-color;
+.MediaSlideshowEditor-playerPreview {
+  .m-plugin-media-preview;
+  margin-top: 20px;
+  border-top: 1px solid @edu-border-color-base;
+}
+
+.MediaSlideshowEditor-playerPreviewLabel {
+  .m-plugin-media-preview-label;
 }
 
 .MediaSlideshowEditor-readonlyValue {
